Bug 107145 - PIVOT CHARTS: missing information about applied filters
Summary: PIVOT CHARTS: missing information about applied filters
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks: Pivot-Chart
  Show dependency treegraph
 
Reported: 2017-04-13 14:57 UTC by bureautiquelibre
Modified: 2021-02-24 05:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Mockup + notes about filter behavior and display (480.29 KB, image/png)
2017-04-13 14:57 UTC, bureautiquelibre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bureautiquelibre 2017-04-13 14:57:27 UTC
Created attachment 132544 [details]
Mockup + notes about filter behavior and display

Some information about the filters should be displayed in the chart area giving clue about the filtering.

Added mockup from specs as attachment.
Comment 1 raal 2017-04-14 16:50:33 UTC
setting as new
Comment 2 bureautiquelibre 2017-04-27 13:02:31 UTC
OK to have only page field filter displayed as in the pivot table itself.

Only page field need fix.
Comment 3 Commit Notification 2017-05-01 20:27:52 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d02d52887678cd3d518c19a235bc443c292b3041

tdf#107145 display applied filters for page field in pivot chart

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 alamdavid 2019-08-29 05:51:44 UTC Comment hidden (spam)
Comment 5 markwell 2020-11-24 06:32:36 UTC Comment hidden (spam)
Comment 6 westgil 2021-02-24 05:05:39 UTC Comment hidden (spam)