tdf#107145 display applied filters for page field in pivot chart

Add field output description which shows the description of the
filtered output, which can be either "- all -" when nothing is
filtered, "- multiple -" when multiple values are outputted or
the specific value - the only value remaining.

Change-Id: I8fca6050dabba9878e9f3a31e4be7a03e3b87467
Reviewed-on: https://gerrit.libreoffice.org/37125
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>